--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "auto-update-poc",
   "productName": "auto-update-poc",
-  "version": "1.0.0",
+  "version": "1.0.9",
   "description": "My Electron application description",
   "main": ".webpack/main",
   "scripts": {
@@ -24,6 +24,7 @@
     "@electron-forge/maker-squirrel": "^6.0.5",
     "@electron-forge/maker-zip": "^6.0.5",
     "@electron-forge/plugin-webpack": "^6.0.5",
+    "@electron-forge/publisher-github": "^6.0.5",
     "@types/node": "^18.14.1",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
