--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,9 +1,10 @@
 version: '3'
 services:
   nucleus-server:
-    image: atlassian/nucleus:latest
+    build: 
+      context: nucleus 
+    image: nucleus-server
     container_name: nucleus-server
     ports:
-      - "3030:3030"
-    volumes:
-      - "./nucleus/config.js:/opt/service/config.js:ro"
+      - "8080:8080"
+      - "8181:8181"
